swagger annotations library

--- a/ch02/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch02/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -9,8 +9,17 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <Compile Remove="Endpoints\GameEndpointsPreOpenAPI.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <None Include="Endpoints\GameEndpointsPreOpenAPI.cs" />
+  </ItemGroup>
+
+  <ItemGroup>
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-preview.4.23260.4" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
+    <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
 
   <ItemGroup>
