--- a/ch03/Codebreaker.GameAPIs/Properties/launchSettings.json
+++ b/ch03/Codebreaker.GameAPIs/Properties/launchSettings.json
@@ -2,6 +2,7 @@
   "profiles": {
     "Codebreaker.GameAPIs": {
       "commandName": "Project",
+      "launchBrowser": true,
       "launchUrl": "swagger",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
