--- a/ch03/Codebreaker.GameAPIs/appsettings.Development.json
+++ b/ch03/Codebreaker.GameAPIs/appsettings.Development.json
@@ -4,5 +4,9 @@
       "Default": "Information",
       "Microsoft.AspNetCore": "Warning"
     }
+  },
+  "DataStorage": "SqlServer",
+  "ConnectionStrings": {
+    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
   }
 }
