--- a/ch03/Codebreaker.GameAPIs.Models/Codebreaker.GameAPIs.Models.csproj
+++ b/ch03/Codebreaker.GameAPIs.Models/Codebreaker.GameAPIs.Models.csproj
@@ -1,14 +1,14 @@
 ﻿<Project Sdk="Microsoft.NET.Sdk">
 
   <PropertyGroup>
-    <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
+    <TargetFrameworks>net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Codebreaker.GameAPIs.Algorithms" Version="3.2.0-beta.15" />
+    <PackageReference Include="Codebreaker.GameAPIs.Algorithms" Version="3.3.0-beta.17" />
   </ItemGroup>
 
 </Project>
