--- a/ch03/Codebreaker.GameAPIs/appsettings.json
+++ b/ch03/Codebreaker.GameAPIs/appsettings.json
@@ -5,6 +5,5 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-  "AllowedHosts": "*",
-  "DataStorage": "SqlServer"
+    "AllowedHosts": "*"
 }
