--- a/ch03/Codebreaker.Data.SqlServer/Codebreaker.Data.SqlServer.csproj
+++ b/ch03/Codebreaker.Data.SqlServer/Codebreaker.Data.SqlServer.csproj
@@ -7,7 +7,7 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
-  <ItemGroup Condition="'$(TargetFramework)' == 'net8.0'">
+  <ItemGroup>
     <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.5.23280.1" />
   </ItemGroup>
   
