ef core sql server context and migrations

--- a/ch03/Codebreaker.Data.SqlServer/Codebreaker.Data.SqlServer.csproj
+++ b/ch03/Codebreaker.Data.SqlServer/Codebreaker.Data.SqlServer.csproj
@@ -14,5 +14,9 @@
   <ItemGroup>
     <ProjectReference Include="..\Codebreaker.GameAPIs.Models\Codebreaker.GameAPIs.Models.csproj" />
   </ItemGroup>
+  
+  <ItemGroup>
+    <Folder Include="Converters\" />
+  </ItemGroup>
 
 </Project>
