--- a/ch04/Codebreaker.GameAPIs.KiotaClient/Codebreaker.GameAPIs.KiotaClient.csproj
+++ b/ch04/Codebreaker.GameAPIs.KiotaClient/Codebreaker.GameAPIs.KiotaClient.csproj
@@ -6,4 +6,12 @@
     <Nullable>enable</Nullable>
   </PropertyGroup>
 
+  <ItemGroup>
+    <PackageReference Include="Microsoft.Kiota.Abstractions" Version="1.2.1" />
+    <PackageReference Include="Microsoft.Kiota.Http.HttpClientLibrary" Version="1.0.6" />
+    <PackageReference Include="Microsoft.Kiota.Serialization.Form" Version="1.0.1" />
+    <PackageReference Include="Microsoft.Kiota.Serialization.Json" Version="1.0.7" />
+    <PackageReference Include="Microsoft.Kiota.Serialization.Text" Version="1.0.1" />
+  </ItemGroup>
+
 </Project>
