--- a/ch04/server/Codebreaker.GameAPIs.Models/Codebreaker.GameAPIs.Models.csproj
+++ b/ch04/server/Codebreaker.GameAPIs.Models/Codebreaker.GameAPIs.Models.csproj
@@ -8,7 +8,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Codebreaker.GameAPIs.Algorithms" Version="3.4.0-beta.21" />
+    <PackageReference Include="CNinnovation.Codebreaker.Analyzers" Version="3.5.0-beta.41" />
   </ItemGroup>
 
 </Project>
