--- a/ch04/client/Codebreaker.Console/appsettings.json
+++ b/ch04/client/Codebreaker.Console/appsettings.json
@@ -4,5 +4,5 @@
       "Default": "Warning"
     }
   },
-  "GamesApiUrl": "http://localhost:9400/games/"
+  "GamesApiUrl": "http://localhost:9400"
 }
