fix kiota console folder

--- a/ch04/client/Codebreaker.KiotaConsole/Codebreaker.KiotaConsole.csproj
+++ b/ch04/client/Codebreaker.KiotaConsole/Codebreaker.KiotaConsole.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <ProjectReference Include="..\client\Codebreaker.GameApis.KiotaClient\Codebreaker.GameApis.KiotaClient.csproj" />
+    <ProjectReference Include="..\Codebreaker.GameApis.KiotaClient\Codebreaker.GameApis.KiotaClient.csproj" />
   </ItemGroup>
 
   <ItemGroup>
