rename sql password file

--- a/ch05/docker-compose.yml
+++ b/ch05/docker-compose.yml
@@ -37,7 +37,7 @@ services:
 
 secrets:
   sqlpassword:
-    file: ./db_password.txt
+    file: ./sql_password.txt
 
 volumes:
   gamessqlstorage-volume:
