--- a/ch05/CodeBreaker.Bot/appsettings.json
+++ b/ch05/CodeBreaker.Bot/appsettings.json
@@ -5,8 +5,5 @@
             "Microsoft.AspNetCore": "Warning"
         }
     },
-    "AllowedHosts": "*",
-    "ApplicationInsights": {
-        "ConnectionString": "InstrumentationKey=fb6db920-7a63-4b05-90db-51f9e9925768;IngestionEndpoint=https://westeurope-5.in.applicationinsights.azure.com/;LiveEndpoint=https://westeurope.livediagnostics.monitor.azure.com/"
-    }
+    "AllowedHosts": "*"
 }
