updates from chapter 2

--- a/ch03/Codebreaker.GameAPIs/appsettings.json
+++ b/ch03/Codebreaker.GameAPIs/appsettings.json
@@ -1,13 +1,9 @@
 {
-  "Logging": {
-    "LogLevel": {
-      "Default": "Information",
-      "Microsoft.AspNetCore": "Warning"
-    }
-  },
-  "AllowedHosts": "*",
-  "DataStorage": "Cosmos",
-  "ConnectionStrings": {
-    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
-  }
+    "Logging": {
+        "LogLevel": {
+            "Default": "Information",
+            "Microsoft.AspNetCore": "Warning"
+        }
+    },
+    "AllowedHosts": "*"
 }
