primary constructors, colleciton initializers #9

--- a/ch02/Codebreaker.GameAPIs.Analyzers/Codebreaker.Analyzers.csproj
+++ b/ch02/Codebreaker.GameAPIs.Analyzers/Codebreaker.Analyzers.csproj
@@ -5,6 +5,7 @@
     <TargetFrameworks>net7.0;net8.0</TargetFrameworks>
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
+    <LangVersion>preview</LangVersion>
     <PackageTags>
       Codebreaker;CNinnovation;GameAnalyzers;
     </PackageTags>
