server updates from chapter 3

--- a/ch04/server/Codebreaker.GameAPIs/appsettings.json
+++ b/ch04/server/Codebreaker.GameAPIs/appsettings.json
@@ -6,7 +6,7 @@
     }
   },
   "AllowedHosts": "*",
-  "DataStorage": "Cosmos",
+  "DataStorage": "InMemory",
   "ConnectionStrings": {
     "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
   }
