--- a/ch05/CodeBreaker.Bot/Properties/launchSettings.json
+++ b/ch05/CodeBreaker.Bot/Properties/launchSettings.json
@@ -1,15 +1,7 @@
 {
   "$schema": "https://json.schemastore.org/launchsettings.json",
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:31518",
-      "sslPort": 0
-    }
-  },
   "profiles": {
-    "MMBot": {
+    "Codebreakerbot": {
       "commandName": "Project",
       "launchBrowser": true,
       "launchUrl": "swagger",
@@ -18,14 +10,6 @@
       },
       "applicationUrl": "http://localhost:5141",
       "dotnetRunMessages": true
-    },
-    "IIS Express": {
-      "commandName": "IISExpress",
-      "launchBrowser": true,
-      "launchUrl": "swagger",
-      "environmentVariables": {
-        "ASPNETCORE_ENVIRONMENT": "Development"
-      }
     },
     "Docker": {
       "commandName": "Docker",
