--- a/ch05/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch05/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -8,18 +8,13 @@
     <LangVersion>preview</LangVersion>
   </PropertyGroup>
 
-  <PropertyGroup>
-    <ContainerRepository>codebreaker/bot</ContainerRepository>
-    <ContainerImageTags>3.5.2;latest</ContainerImageTags>
-  </PropertyGroup>
-
   <ItemGroup>
     <ContainerPort Include="8080" Type="tcp" />    
   </ItemGroup>
 
   <ItemGroup>
     <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.5.0-beta.13" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-preview.7.23375.9" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-rc.1.23421.29" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
