--- a/ch05/CodeBreaker.Bot/appsettings.Development.json
+++ b/ch05/CodeBreaker.Bot/appsettings.Development.json
@@ -1,9 +1,10 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "ApiBase": "http://localhost:9400"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "ApiBase": "https://codebreaker-gamesapi-3.purplebush-9a246700.westeurope.azurecontainerapps1.io",
+  "ApiBase1": "http://localhost:9400"
 }
