--- a/ch05/CodeBreaker.Bot/appsettings.Production.json
+++ b/ch05/CodeBreaker.Bot/appsettings.Production.json
@@ -1,9 +1,9 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "ApiBase": "https://codebreakerapi-2.purplebush-9a246700.westeurope.azurecontainerapps.io"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "ApiBase": "https://codebreaker-gamesapi-3.purplebush-9a246700.westeurope.azurecontainerapps.io"
 }
