--- a/ch05/Codebreaker.GameAPIs/Dockerfile
+++ b/ch05/Codebreaker.GameAPIs/Dockerfile
@@ -1,11 +1,12 @@
 #See https://aka.ms/customizecontainer to learn how to customize your debug container and how Visual Studio uses this Dockerfile to build your images for faster debugging.
 
-FROM mcr.microsoft.com/dotnet/aspnet:8.0-preview AS base
+FROM mcr.microsoft.com/dotnet/aspnet:8.0 AS base
 USER app
 WORKDIR /app
 EXPOSE 8080
 
-FROM mcr.microsoft.com/dotnet/sdk:8.0-preview AS build
+FROM mcr.microsoft.com/dotnet/sdk:8.0 AS build
+ARG BUILD_CONFIGURATION=Release
 WORKDIR /src
 COPY ["Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj", "Codebreaker.GameAPIs/"]
 COPY ["Codebreaker.Data.Cosmos/Codebreaker.Data.Cosmos.csproj", "Codebreaker.Data.Cosmos/"]
@@ -14,10 +15,10 @@ COPY ["Codebreaker.Data.SqlServer/Codebreaker.Data.SqlServer.csproj", "Codebreak
 RUN dotnet restore "Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj"
 COPY . .
 WORKDIR "/src/Codebreaker.GameAPIs"
-RUN dotnet build "Codebreaker.GameAPIs.csproj" -c Release -o /app/build
+RUN dotnet build "Codebreaker.GameAPIs.csproj" -c $BUILD_CONFIGURATION -o /app/build
 
 FROM build AS publish
-RUN dotnet publish "Codebreaker.GameAPIs.csproj" -c Release -o /app/publish /p:UseAppHost=false
+RUN dotnet publish "Codebreaker.GameAPIs.csproj" -c $BUILD_CONFIGURATION -o /app/publish /p:UseAppHost=false
 
 FROM base AS final
 WORKDIR /app
