ch 5 game api updates

--- a/ch05/Codebreaker.GameAPIs/appsettings.json
+++ b/ch05/Codebreaker.GameAPIs/appsettings.json
@@ -6,7 +6,8 @@
     }
   },
   "AllowedHosts": "*",
-  "DataStorage": "Cosmos",
+  "AllowCreateDatabase":  true,
+  "DataStorage": "SqlServer",
   "ConnectionStrings": {
     "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
   }
