--- a/ch05/Codebreaker.GameAPIs.NativeAOT/Properties/launchSettings.json
+++ b/ch05/Codebreaker.GameAPIs.NativeAOT/Properties/launchSettings.json
@@ -14,6 +14,15 @@
       "launchBrowser": true,
       "launchUrl": "{Scheme}://{ServiceHost}:{ServicePort}/swagger",
       "publishAllPorts": true
+    },
+    "WSL": {
+      "commandName": "WSL2",
+      "launchUrl": "http://localhost:9400/swagger",
+      "environmentVariables": {
+        "ASPNETCORE_ENVIRONMENT": "Development",
+        "ASPNETCORE_URLS": "http://localhost:9400"
+      },
+      "distributionName": ""
     }
   },
   "$schema": "https://json.schemastore.org/launchsettings.json"
