ch 6: azure app configuration

--- a/ch07/ConfigurationPrototype/appsettings.json
+++ b/ch07/ConfigurationPrototype/appsettings.json
@@ -5,5 +5,10 @@
       "Microsoft.AspNetCore": "Warning"
     }
   },
-  "AllowedHosts": "*"
+  "AllowedHosts": "*",
+  "Config1": "config 1 value",
+  "Service1": {
+    "Config1": "config 1 value",
+    "Config2": "config 2 value"
+  }
 }
