--- a/ch06/Codebreaker.GameAPIs.Models/Codebreaker.GameAPIs.Models.csproj
+++ b/ch06/Codebreaker.GameAPIs.Models/Codebreaker.GameAPIs.Models.csproj
@@ -5,10 +5,11 @@
     <ImplicitUsings>enable</ImplicitUsings>
     <Nullable>enable</Nullable>
     <LangVersion>preview</LangVersion>
+    <IsAotCompatible>true</IsAotCompatible>
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="CNinnovation.Codebreaker.Analyzers" Version="3.5.0-beta.50" />
+    <PackageReference Include="CNinnovation.Codebreaker.Analyzers" Version="3.5.0-beta.51" />
   </ItemGroup>
 
 </Project>
