--- a/ch06/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch06/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -21,7 +21,7 @@
 
   <ItemGroup>
     <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.5.0-beta.13" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-preview.7.23375.9" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-rc.2.23480.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
