--- a/ch06/Codebreaker.Data.Cosmos/Codebreaker.Data.Cosmos.csproj
+++ b/ch06/Codebreaker.Data.Cosmos/Codebreaker.Data.Cosmos.csproj
@@ -7,7 +7,7 @@
   </PropertyGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-preview.7.23375.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Cosmos" Version="8.0.0-rc.2.23480.1" />
   </ItemGroup>
   
   <ItemGroup>
