--- a/ch06/Codebreaker.Data.SqlServer/Codebreaker.Data.SqlServer.csproj
+++ b/ch06/Codebreaker.Data.SqlServer/Codebreaker.Data.SqlServer.csproj
@@ -14,7 +14,7 @@
   </ItemGroup>
 
   <ItemGroup>
-    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-preview.7.23375.4" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.SqlServer" Version="8.0.0-rc.2.23480.1" />
   </ItemGroup>
   
   <ItemGroup>
