ch 7 code updates

--- a/ch07/CodeBreaker.Bot/appsettings.json
+++ b/ch07/CodeBreaker.Bot/appsettings.json
@@ -1,9 +1,11 @@
 {
-    "Logging": {
-        "LogLevel": {
-            "Default": "Information",
-            "Microsoft.AspNetCore": "Warning"
-        }
-    },
-    "AllowedHosts": "*"
+  "Logging": {
+    "LogLevel": {
+      "Default": "Information",
+      "Microsoft.AspNetCore": "Warning"
+    }
+  },
+  "AllowedHosts": "*",
+  "SolutionEnvironment": "Azure",
+  "AzureAppConfigurationUri": "https://acs-codebreaker-p5d6qfdaq37he-dev.azconfig.io"
 }
