--- a/ch07/CodeBreaker.Bot/CodeBreaker.Bot.csproj
+++ b/ch07/CodeBreaker.Bot/CodeBreaker.Bot.csproj
@@ -9,8 +9,9 @@
   </PropertyGroup>
 
   <PropertyGroup>
+    <ContainerRegistry>codebreakerp5d6qfdaq37hedev.azurecr.io</ContainerRegistry>
     <ContainerRepository>codebreaker/bot</ContainerRepository>
-    <ContainerImageTags>3.5.3;latest</ContainerImageTags>
+    <ContainerImageTags>3.5.5;latest</ContainerImageTags>
   </PropertyGroup>
 
   <ItemGroup>
@@ -18,8 +19,10 @@
   </ItemGroup>
 
   <ItemGroup>
+    <PackageReference Include="Azure.Identity" Version="1.10.2" />
     <PackageReference Include="CNinnovation.Codebreaker.GamesClient" Version="3.5.0-beta.13" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-rc.1.23421.29" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-rc.2.23480.2" />
+    <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="7.0.0-preview.2" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
   </ItemGroup>
 
