--- a/ch07/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch07/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -10,15 +10,25 @@
     <DockerDefaultTargetOS>Linux</DockerDefaultTargetOS>
   </PropertyGroup>
 
+  <PropertyGroup>
+    <ContainerRegistry>codebreakerp5d6qfdaq37hedev.azurecr.io</ContainerRegistry>
+    <ContainerRepository>codebreaker/gamesapi</ContainerRepository>
+    <ContainerImageTags>3.5.5;latest</ContainerImageTags>
+  </PropertyGroup>
+
   <ItemGroup>
-    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.5.0-beta.13" />
-    <PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.5.0-beta.13" />
-    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-rc.1.23421.29" />
-    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-rc.1.23419.6">
+    <ContainerPort Include="8080" Type="tcp" />
+  </ItemGroup>
+
+  <ItemGroup>
+    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.5.0-beta.14" />
+    <PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.5.0-beta.14" />
+    <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-rc.2.23480.2" />
+    <PackageReference Include="Microsoft.Azure.AppConfiguration.AspNetCore" Version="7.0.0-preview.2" />
+    <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-rc.2.23480.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
   </ItemGroup>
