--- a/ch07/Codebreaker.GameAPIs/appsettings.json
+++ b/ch07/Codebreaker.GameAPIs/appsettings.json
@@ -6,9 +6,6 @@
     }
   },
   "AllowedHosts": "*",
-  "AllowCreateDatabase":  true,
-  "DataStorage": "SqlServer",
-  "ConnectionStrings": {
-    "GamesSqlServerConnection": "server=(localdb)\\mssqllocaldb;database=CodebreakerGames;trusted_connection=true"
-  }
+  "SolutionEnvironment": "Azure",
+  "AzureAppConfigurationUri": "https://appcs-codebreaker-dev.azconfig.io"
 }
