updates for managed identities

--- a/ch07/CodeBreaker.Bot/appsettings.json
+++ b/ch07/CodeBreaker.Bot/appsettings.json
@@ -7,5 +7,6 @@
   },
   "AllowedHosts": "*",
   "SolutionEnvironment": "Azure",
-  "AzureAppConfigurationUri": "https://acs-codebreaker-p5d6qfdaq37he-dev.azconfig.io"
+  "AzureAppConfigurationUri": "https://appcs-codebreaker42-dev.azconfig.io",
+  "ManagedIdentityClientId": "aff48fe4-2f4a-4e56-9fae-bc024267f703"
 }
