simplify ch06 code

--- a/ch06/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
+++ b/ch06/Codebreaker.GameAPIs/Codebreaker.GameAPIs.csproj
@@ -11,20 +11,15 @@
   </PropertyGroup>
 
   <ItemGroup>
+    <PackageReference Include="CNinnovation.Codebreaker.Cosmos" Version="3.5.0-beta.14" />
+    <PackageReference Include="CNinnovation.Codebreaker.SqlServer" Version="3.5.0-beta.14" />
     <PackageReference Include="Microsoft.AspNetCore.OpenApi" Version="8.0.0-rc.2.23480.2" />
     <PackageReference Include="Microsoft.EntityFrameworkCore.Design" Version="8.0.0-rc.2.23480.1">
       <PrivateAssets>all</PrivateAssets>
       <IncludeAssets>runtime; build; native; contentfiles; analyzers; buildtransitive</IncludeAssets>
     </PackageReference>
-    <PackageReference Include="Microsoft.VisualStudio.Azure.Containers.Tools.Targets" Version="1.19.5" />
     <PackageReference Include="Swashbuckle.AspNetCore" Version="6.5.0" />
     <PackageReference Include="Swashbuckle.AspNetCore.Annotations" Version="6.5.0" />
-  </ItemGroup>
-
-  <ItemGroup>
-    <ProjectReference Include="..\Codebreaker.Data.Cosmos\Codebreaker.Data.Cosmos.csproj" />
-    <ProjectReference Include="..\Codebreaker.Data.SqlServer\Codebreaker.Data.SqlServer.csproj" />
-    <ProjectReference Include="..\Codebreaker.GameAPIs.Models\Codebreaker.GameAPIs.Models.csproj" />
   </ItemGroup>
 
 </Project>
