fix parameter input with bot test workflow

--- a/.github/workflows/codebreaker-bot-runtest.yml
+++ b/.github/workflows/codebreaker-bot-runtest.yml
@@ -17,5 +17,5 @@ jobs:
     uses: ./.github/workflows/shared-test.yml
     with:
       project-name: 'Codebreaker.Bot'
-      solution: 'ch08/BotService.sln'
+      solution-path: 'ch08/BotService.sln'
      
