ch08 fix test result name

--- a/.github/workflows/shared-test.yml
+++ b/.github/workflows/shared-test.yml
@@ -40,6 +40,6 @@ jobs:
       - name: Upload the test results
         uses: actions/upload-artifact@v3
         with:
-          name: test-results-${{ inputs.project-name}}}
+          name: test-results-${{ inputs.project-name}}
           path: TestResults-${{ inputs.project-name}}
         if: always()
