update image repo name

--- a/.github/workflows/shared-build-image.yml
+++ b/.github/workflows/shared-build-image.yml
@@ -4,8 +4,8 @@ name: Shared workflow to build and publish a Docker container image to ACR
 on:
   workflow_call:
     inputs:
-      solution-path:
-        description: 'The solution file of the project to build'
+      project-path:
+        description: 'The project file to build'
         required: true
         type: string
       dotnet-version:
@@ -13,7 +13,7 @@ on:
           required: false
           type: string
           default: '8.0.x'
-      container-image-name:
+      container-repository:
         description: 'The name of the Docker image'
         required: true
         type: string
@@ -23,6 +23,10 @@ on:
         type: string
       version-suffix:
         description: 'The version suffix to use'
+        required: true
+        type: string
+      image-tags:
+        description: 'The tags to use for the Docker image'
         required: true
         type: string
     secrets:
@@ -55,7 +59,7 @@ jobs:
           password: ${{ secrets.REGISTRY_PASSWORD }}
 
       - name: Build and push image to Azure Container Registry
-        run: dotnet publish -c Release ${{ inputs.solution-path }} --os linux --arch x64 --version-suffix ${{ inputs.version-suffix }} -p:PublishProfile=DefaultContainer -p:ContainerImageName=${{ inputs.container-image-name }} -p:ContainerRegistry=${{ inputs.registry-login-server }} -p:ContainerRegistryUsername=${{ secrets.REGISTRY_USERNAME }} -p:ContainerRegistryPassword=${{ secrets.REGISTRY_PASSWORD }} -p:ContainerRegistryUseSSL=true
+        run: dotnet publish -c Release ${{ inputs.project-path }} --os linux --arch x64 --version-suffix ${{ inputs.version-suffix }} -p:PublishProfile=DefaultContainer -p:ContainerRepository=${{ inputs.container-repository }} -p:ContainerImageTags=${{ inputs.image-tags }} -p:ContainerRegistry=${{ inputs.registry-login-server }} -p:ContainerRegistryUsername=${{ secrets.REGISTRY_USERNAME }} -p:ContainerRegistryPassword=${{ secrets.REGISTRY_PASSWORD }} -p:ContainerRegistryUseSSL=true
 
       - name: Upload artifcat
         uses: actions/upload-artifact@v3
