--- a/.github/workflows/codebreaker-bot.yml
+++ b/.github/workflows/codebreaker-bot.yml
@@ -27,10 +27,11 @@ jobs:
     needs:  build-and-test
     uses: ./.github/workflows/shared-build-image.yml
     with:
-      solution-path: 'ch08/BotService.sln'
-      container-image-name: 'codebreaker/bot'
+      project-path: 'ch08/Codebreaker.Bot/Codebreaker.Bot.csproj'
+      container-repository: '$REGISTRY_LOGIN_SERVER/codebreaker/bot'
       registry-login-server: $REGISTRY_LOGIN_SERVER
       version-suffix: beta.1.${{ github.run_number }}
+      image-tags: '3.8.0-beta${{ github.run_number }};latest'
     secrets:
       REGISTRY_USERNAME: ${{ secrets.REGISTRY_USERNAME }}
       REGISTRY_PASSWORD: ${{ secrets.REGISTRY_PASSWORD }}
