--- a/.github/workflows/codebreaker-bot.yml
+++ b/.github/workflows/codebreaker-bot.yml
@@ -39,6 +39,7 @@ jobs:
     with:
       container-repository: 'codebreaker/bot'
       acr-name: ${{ vars.ACR_NAME }}
+      registry-login-server: ${{ vars.REGISTRY_LOGIN_SERVER }}      
       container-appname: 'codebreaker-bot'
       image-tag: '3.9.0-beta.${{ github.run_number }}'
       resource-group: 'rg-codebreaker-dev'
